--- a/donorModule.html
+++ b/donorModule.html
@@ -141,10 +141,10 @@
     <ion-content class="ion-padding">
         <table class="infoTable">
             <tr>
-                <th class="infoCell">Bill ID</th>
-                <th class="infoCell">Split</th>
-                <th class="infoCell">Comments</th>
-                <th class="infoCell"></th>
+                <th id="item_id">Serial</th>
+                <th id="item_name">Item</th>
+                <th id="item_loanout">Status</th>
+                <th id="item_location">Location</th>
             </tr>
 
             <tr>
@@ -154,25 +154,35 @@
             </tr>
 
             <tr>
-
-                <td class="infoCell">Item 1</td>
-                <td class="infoCell">Item 2</td>
-                <td class="infoCell">Item 3</td>
-                <td class="infoButton">
-                    <ion-button class="tenantInvModal-btn" size="small" expand="block" color="themetext">More
-                    </ion-button>
-                </td>
+                <th id="item_id">0001</th>
+                <th id="item_name">Spoon</th>
+                <th id="item_loanout">Loaned</th>
+                <th id="item_location">57890</th>
             </tr>
 
             <tr>
-
-                <td class="infoCell">Item 1</td>
-                <td class="infoCell">Item 2</td>
-                <td class="infoCell">Item 3</td>
-                <td class="infoButton">
-                    <ion-button class="tenantInvModal-btn" size="small" expand="block" color="themetext">More
-                    </ion-button>
-                </td>
+                <th id="item_id">0001</th>
+                <th id="item_name">Carpet</th>
+                <th id="item_loanout">Loaned</th>
+                <th id="item_location">57890</th>
+            </tr>
+            <tr>
+                <th id="item_id">0001</th>
+                <th id="item_name">Curtain</th>
+                <th id="item_loanout">Loaned</th>
+                <th id="item_location">57890</th>
+            </tr>
+            <tr>
+                <th id="item_id">0001</th>
+                <th id="item_name">Mattress</th>
+                <th id="item_loanout">Available</th>
+                <th id="item_location">57890</th>
+            </tr>
+            <tr>
+                <th id="item_id">0001</th>
+                <th id="item_name">Fork</th>
+                <th id="item_loanout">Available</th>
+                <th id="item_location">57890</th>
             </tr>
 
         </table>
