--- a/donorProf.html
+++ b/donorProf.html
@@ -159,7 +159,7 @@
     </ion-item>-->
 
     <ion-item color="themewhite">
-        <ion-title size="small">Name:</ion-title><div id="cwName">case worker name here</div>
+        <ion-title size="small">Name:</ion-title><div id="donor_name">Jack Tyler</div>
     </ion-item>
 
     <!--<ion-item color="themewhite">
@@ -167,14 +167,8 @@
     </ion-item>-->
 
     <ion-item color="themewhite">
-        <ion-title size="small">ID:</ion-title><div id="cwID">case worker id here</div>
+        <ion-title size="small">ID:</ion-title><div id="donor_id">123456</div>
     </ion-item>
-
-    <div class="acc-btn">
-        <ion-button id="change-pw" expand="block" color="themetext">
-          <div class="whitetext">Change password</div>
-        </ion-button>
-      </div>
 
 
 
