--- a/login.html
+++ b/login.html
@@ -42,5 +42,11 @@
         <div class="whitetext">Log in as Donor</div>
       </ion-button>
     </div>
+
+    <div class="acc-btn">
+      <ion-button id="dummy3-btn" expand="block" color="themetext">
+        <div class="whitetext">See receipt</div>
+      </ion-button>
+    </div>
   </form>
 </div>
