--- a/tenantFamily.html
+++ b/tenantFamily.html
@@ -57,42 +57,42 @@
             </ion-row>
             <ion-row>
                 <ion-col>
-                 <br>
+                    <br>
                 </ion-col>
             </ion-row>
             <ion-row>
                 <ion-col>
-                <br>
+                    <br>
                 </ion-col>
             </ion-row>
             <ion-row>
                 <ion-col>
-                 <br>
+                    <br>
                 </ion-col>
             </ion-row>
             <ion-row>
                 <ion-col>
-                <br>
+                    <br>
                 </ion-col>
             </ion-row>
             <ion-row>
                 <ion-col>
-                 <br>
+                    <br>
                 </ion-col>
             </ion-row>
             <ion-row>
                 <ion-col>
-                <br>
+                    <br>
                 </ion-col>
             </ion-row>
             <ion-row>
                 <ion-col>
-                 <br>
+                    <br>
                 </ion-col>
             </ion-row>
             <ion-row>
                 <ion-col>
-                <br>
+                    <br>
                 </ion-col>
             </ion-row>
             <ion-row>
@@ -115,7 +115,7 @@
             <ion-buttons slot="start">
                 <ion-menu-button></ion-menu-button>
             </ion-buttons>
-            <ion-title class="pageTitle" slot="start">Payment</ion-title>
+            <ion-title class="pageTitle" slot="start">Family</ion-title>
         </ion-toolbar>
     </ion-header>
 
@@ -125,45 +125,110 @@
     </ion-toolbar>
 
     <!--place in Nav content here-->
-
     <ion-content class="ion-padding">
-        <table class="infoTable">
-            <tr>
-                <th class="infoCell">Payment ID</th>
-                <th class="infoCell">Amount</th>
-                <th class="infoCell">Deduction</th>
-                <th class="infoCell"></th>
-            </tr>
 
-            <tr>
-                <td colspan="4">
-                    <hr>
-                </td>
-            </tr>
+        <ion-list>
+            <ion-item>
+                <ion-label>Unit No.</ion-label>
+                <ion-label>04-789</ion-label>
+            </ion-item>
+            <ion-item-divider>
+                <ion-label>
+                    <br>
+                </ion-label>
+            </ion-item-divider>
+            <ion-item>
+                <ion-label>Tenant Details</ion-label>
+            </ion-item>
+            <ion-item>
+                <ion-label>Name</ion-label>
+                <ion-label>Jack Tyler</ion-label>
+            </ion-item>
+            <ion-item>
+                <ion-label>ID</ion-label>
+                <ion-label>T123456</ion-label>
+            </ion-item>
+            <ion-item>
+                <ion-label>Phone Number</ion-label>
+                <ion-label>9876 5432</ion-label>
+            </ion-item>
+            <ion-item>
+                <ion-label>Citizenship</ion-label>
+                <ion-label>Singaporean</ion-label>
+            </ion-item>
 
-            <tr>
+            <ion-item-divider>
+                <ion-label>
+                    <br>
+                </ion-label>
+            </ion-item-divider>
 
-                <td class="infoCell">9735</td>
-                <td class="infoCell">$20.00</td>
-                <td class="infoCell">-$5.00</td>
-                <td class="infoButton">
-                    <ion-button class="paymentCWModal-btn" size="small" expand="block" color="themetext">More
-                    </ion-button>
-                </td>
-            </tr>
+            <ion-item>
+                <ion-label>Co-Tenant Details</ion-label>
+            </ion-item>
+            <ion-item>
+                <ion-label>Zach Roe</ion-label>
+                <ion-label>T123456</ion-label>
+            </ion-item>
+            <ion-item>
+                <ion-label>Phone Number</ion-label>
+                <ion-label>9876 5432</ion-label>
+            </ion-item>
+            <ion-item>
+                <ion-label>Citizenship</ion-label>
+                <ion-label>Singaporean</ion-label>
+            </ion-item>
 
-            <tr>
+            <ion-item-divider>
+                <ion-label>
+                    <br>
+                </ion-label>
+            </ion-item-divider>
 
-                <td class="infoCell">Item 1</td>
-                <td class="infoCell">Item 2</td>
-                <td class="infoCell">Item 3</td>
-                <td class="infoButton">
-                    <ion-button class="paymentCWModal-btn" size="small" expand="block" color="themetext">More
-                    </ion-button>
-                </td>
-            </tr>
+            <ion-item>
+                <ion-label>Co-Tenant Details</ion-label>
+            </ion-item>
+            <ion-item>
+                <ion-label>Daniel Lo</ion-label>
+                <ion-label>T123456</ion-label>
+            </ion-item>
+            <ion-item>
+                <ion-label>Phone Number</ion-label>
+                <ion-label>9876 5432</ion-label>
+            </ion-item>
+            <ion-item>
+                <ion-label>Citizenship</ion-label>
+                <ion-label>Singaporean</ion-label>
+            </ion-item>
 
-        </table>
+            <ion-item-divider>
+                <ion-label>
+                    <br>
+                </ion-label>
+            </ion-item-divider>
+
+            <ion-item>
+                <ion-label>Co-Tenant Details</ion-label>
+            </ion-item>
+            <ion-item>
+                <ion-label>Corbyn Bi</ion-label>
+                <ion-label>T123456</ion-label>
+            </ion-item>
+            <ion-item>
+                <ion-label>Phone Number</ion-label>
+                <ion-label>9876 5432</ion-label>
+            </ion-item>
+            <ion-item>
+                <ion-label>Citizenship</ion-label>
+                <ion-label>Singaporean</ion-label>
+            </ion-item>
+
+            <ion-item-divider>
+                <ion-label>
+                    <br>
+                </ion-label>
+            </ion-item-divider>
+        </ion-list>
+
     </ion-content>
-
 </div>
