--- a/tenantUtility.html
+++ b/tenantUtility.html
@@ -19,7 +19,7 @@
                 <ion-col>
                     <ion-item>
                         <ion-icon name="person-circle" slot="start"></ion-icon>
-                        <ion-title id="tenantProf-btn">Tenant Profile</ion-title>
+                        <ion-title id="tenantProf-btn">Profile</ion-title>
                     </ion-item>
                 </ion-col>
             </ion-row>
@@ -27,7 +27,7 @@
                 <ion-col>
                     <ion-item>
                         <ion-icon name="folder" slot="start"></ion-icon>
-                        <ion-title id="tenantInv-btn">Tenant Inventory</ion-title>
+                        <ion-title id="tenantInv-btn">Inventory</ion-title>
                     </ion-item>
                 </ion-col>
             </ion-row>
@@ -51,7 +51,7 @@
                 <ion-col>
                     <ion-item>
                         <ion-icon name="card" slot="start"></ion-icon>
-                        <ion-title id="tenantPayment-btn">Payment Modules</ion-title>
+                        <ion-title id="tenantPayment-btn">Payment</ion-title>
                     </ion-item>
                 </ion-col>
             </ion-row>
@@ -97,13 +97,9 @@
             </ion-row>
             <ion-row>
                 <ion-col>
-                <br>
-                </ion-col>
-            </ion-row>
-            <ion-row>
-                <ion-col>
                     <ion-footer>
                         <ion-toolbar>
+                            <ion-icon name="log-out" slot="start"></ion-icon>
                             <ion-title class="logout-btn">Log Out</ion-title>
                         </ion-toolbar>
                     </ion-footer>
