--- a/donorProf.html
+++ b/donorProf.html
@@ -170,6 +170,12 @@
         <ion-title size="small">ID:</ion-title><div id="donor_id">123456</div>
     </ion-item>
 
+    <div class="acc-btn">
+        <ion-button id="change-pw" expand="block" color="themetext">
+          <div class="whitetext">Change password</div>
+        </ion-button>
+      </div>
+
 
 
     <!--place in Nav content here-->
