--- a/adminInv.html
+++ b/adminInv.html
@@ -18,16 +18,8 @@
             <ion-row>
                 <ion-col>
                     <ion-item>
-                        <ion-icon name="people-circle" slot="start"></ion-icon>
-                        <ion-title id="tenantFamily-btn">Family</ion-title>
-                    </ion-item>
-                </ion-col>
-            </ion-row>
-            <ion-row>
-                <ion-col>
-                    <ion-item>
                         <ion-icon name="person-circle" slot="start"></ion-icon>
-                        <ion-title id="tenantProf-btn">Profile</ion-title>
+                        <ion-title id="adminDonor-btn">Donor</ion-title>
                     </ion-item>
                 </ion-col>
             </ion-row>
@@ -35,7 +27,7 @@
                 <ion-col>
                     <ion-item>
                         <ion-icon name="folder" slot="start"></ion-icon>
-                        <ion-title id="tenantInv-btn">Inventory</ion-title>
+                        <ion-title id="adminInv-btn">Inventory</ion-title>
                     </ion-item>
                 </ion-col>
             </ion-row>
@@ -43,7 +35,7 @@
                 <ion-col>
                     <ion-item>
                         <ion-icon name="create" slot="start"></ion-icon>
-                        <ion-title id="tenantCons-btn">Consumables</ion-title>
+                        <ion-title id="adminCons-btn">Consumables</ion-title>
                     </ion-item>
                 </ion-col>
             </ion-row>
@@ -51,7 +43,7 @@
                 <ion-col>
                     <ion-item>
                         <ion-icon name="newspaper" slot="start"></ion-icon>
-                        <ion-title id="tenantUtility-btn">Utility Bills</ion-title>
+                        <ion-title id="adminUtility-btn">Utility Bills</ion-title>
                     </ion-item>
                 </ion-col>
             </ion-row>
@@ -59,18 +51,13 @@
                 <ion-col>
                     <ion-item>
                         <ion-icon name="card" slot="start"></ion-icon>
-                        <ion-title id="tenantPayment-btn">Payment</ion-title>
+                        <ion-title id="adminPayment-btn">Payment</ion-title>
                     </ion-item>
                 </ion-col>
             </ion-row>
             <ion-row>
                 <ion-col>
-                <br>
-                </ion-col>
-            </ion-row>
-            <ion-row>
-                <ion-col>
-                <br>
+                 <br>
                 </ion-col>
             </ion-row>
             <ion-row>
@@ -91,6 +78,16 @@
             <ion-row>
                 <ion-col>
                 <br>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                 <br>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                 <br>
                 </ion-col>
             </ion-row>
             <ion-row>
@@ -106,7 +103,6 @@
         </ion-grid>
     </ion-content>
 </ion-menu>
-
 <div class="ion-page" id="main-content">
     <ion-header>
         <ion-toolbar color="themetext">
@@ -166,6 +162,72 @@
                 <td class="infoCell">0003</td>
                 <td class="infoCell">Ah Long</td>
                 <td class="infoCell">Curtain</td>
+                <td class="infoButton">
+                    <ion-button class="tenantInvModal-btn" size="small" expand="block" color="themetext">More
+                    </ion-button>
+                </td>
+            </tr>
+
+            <tr>
+
+                <td class="infoCell">0003</td>
+                <td class="infoCell">Ah Huat</td>
+                <td class="infoCell">Mattress</td>
+                <td class="infoButton">
+                    <ion-button class="tenantInvModal-btn" size="small" expand="block" color="themetext">More
+                    </ion-button>
+                </td>
+            </tr>
+
+            <tr>
+
+                <td class="infoCell">0003</td>
+                <td class="infoCell">Ah Wee</td>
+                <td class="infoCell">Bed</td>
+                <td class="infoButton">
+                    <ion-button class="tenantInvModal-btn" size="small" expand="block" color="themetext">More
+                    </ion-button>
+                </td>
+            </tr>
+
+            <tr>
+
+                <td class="infoCell">0003</td>
+                <td class="infoCell">Ah Kiat</td>
+                <td class="infoCell">Mirror</td>
+                <td class="infoButton">
+                    <ion-button class="tenantInvModal-btn" size="small" expand="block" color="themetext">More
+                    </ion-button>
+                </td>
+            </tr>
+
+            <tr>
+
+                <td class="infoCell">0003</td>
+                <td class="infoCell">Ah Tan</td>
+                <td class="infoCell">Table</td>
+                <td class="infoButton">
+                    <ion-button class="tenantInvModal-btn" size="small" expand="block" color="themetext">More
+                    </ion-button>
+                </td>
+            </tr>
+
+            <tr>
+
+                <td class="infoCell">0003</td>
+                <td class="infoCell">Ah Song</td>
+                <td class="infoCell">Deco</td>
+                <td class="infoButton">
+                    <ion-button class="tenantInvModal-btn" size="small" expand="block" color="themetext">More
+                    </ion-button>
+                </td>
+            </tr>
+
+            <tr>
+
+                <td class="infoCell">0003</td>
+                <td class="infoCell">Ah Liat</td>
+                <td class="infoCell">TV</td>
                 <td class="infoButton">
                     <ion-button class="tenantInvModal-btn" size="small" expand="block" color="themetext">More
                     </ion-button>
