--- a/donorModule.html
+++ b/donorModule.html
@@ -4,7 +4,6 @@
             <ion-grid>
                 <ion-row>
                     <ion-col>
-                        </div>
                         <ion-row>
                             <img id="menuLogo" src="./images/tent.png" alt="tent logo image">
                             <ion-title class="userName">Davier</ion-title>
@@ -12,7 +11,6 @@
                     </ion-col>
                 </ion-row>
             </ion-grid>
-
         </ion-toolbar>
     </ion-header>
     <ion-content>
@@ -40,7 +38,27 @@
             </ion-row>
             <ion-row>
                 <ion-col>
+                 <br>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
                 <br>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                 <br>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                <br>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                 <br>
                 </ion-col>
             </ion-row>
             <ion-row>
@@ -75,44 +93,14 @@
             </ion-row>
             <ion-row>
                 <ion-col>
-                <br>
+                 <br>
                 </ion-col>
             </ion-row>
-            <ion-row>
-                <ion-col>
-                <br>
-                </ion-col>
-            </ion-row>
-            <ion-row>
-                <ion-col>
-                <br>
-                </ion-col>
-            </ion-row>
-            <ion-row>
-                <ion-col>
-                <br>
-                </ion-col>
-            </ion-row>
-            <ion-row>
-                <ion-col>
-                <br>
-                </ion-col>
-            </ion-row>
-            <ion-row>
-                <ion-col>
-                <br>
-                </ion-col>
-            </ion-row>
-            <ion-row>
-                <ion-col>
-                <br>
-                </ion-col>
-            </ion-row>
-            
             <ion-row>
                 <ion-col>
                     <ion-footer>
                         <ion-toolbar>
+                            <ion-icon name="log-out" slot="start"></ion-icon>
                             <ion-title class="logout-btn">Log Out</ion-title>
                         </ion-toolbar>
                     </ion-footer>
@@ -141,10 +129,10 @@
     <ion-content class="ion-padding">
         <table class="infoTable">
             <tr>
-                <th id="item_id">Serial</th>
-                <th id="item_name">Item</th>
-                <th id="item_loanout">Status</th>
-                <th id="item_location">Location</th>
+                <th  class="infoCell" id="item_id">Serial</th>
+                <th  class="infoCell" id="item_name">Item</th>
+                <th  class="infoCell" id="item_loanout">Status</th>
+                <th  class="infoCell" id="item_location">Location</th>
             </tr>
 
             <tr>
@@ -154,35 +142,35 @@
             </tr>
 
             <tr>
-                <th id="item_id">0001</th>
-                <th id="item_name">Spoon</th>
-                <th id="item_loanout">Loaned</th>
-                <th id="item_location">57890</th>
+                <td  class="infoCell" id="item_id">0001</td>
+                <td  class="infoCell" id="item_name">Spoon</td>
+                <td  class="infoCell" id="item_loanout">Loaned</td>
+                <td  class="infoCell" id="item_location">57890</td>
             </tr>
 
             <tr>
-                <th id="item_id">0001</th>
-                <th id="item_name">Carpet</th>
-                <th id="item_loanout">Loaned</th>
-                <th id="item_location">57890</th>
+                <td  class="infoCell" id="item_id">0001</td>
+                <td  class="infoCell" id="item_name">Carpet</td>
+                <td  class="infoCell" id="item_loanout">Loaned</td>
+                <td  class="infoCell" id="item_location">57890</td>
             </tr>
             <tr>
-                <th id="item_id">0001</th>
-                <th id="item_name">Curtain</th>
-                <th id="item_loanout">Loaned</th>
-                <th id="item_location">57890</th>
+                <td  class="infoCell" id="item_id">0001</td>
+                <td  class="infoCell" id="item_name">Curtain</td>
+                <td  class="infoCell" id="item_loanout">Loaned</td>
+                <td  class="infoCell" id="item_location">57890</td>
             </tr>
             <tr>
-                <th id="item_id">0001</th>
-                <th id="item_name">Mattress</th>
-                <th id="item_loanout">Available</th>
-                <th id="item_location">57890</th>
+                <td  class="infoCell" id="item_id">0001</td>
+                <td  class="infoCell" id="item_name">Mattress</td>
+                <td  class="infoCell" id="item_loanout">Available</td>
+                <td  class="infoCell" id="item_location">57890</td>
             </tr>
             <tr>
-                <th id="item_id">0001</th>
-                <th id="item_name">Fork</th>
-                <th id="item_loanout">Available</th>
-                <th id="item_location">57890</th>
+                <td  class="infoCell" id="item_id">0001</td>
+                <td  class="infoCell" id="item_name">Fork</td>
+                <td  class="infoCell" id="item_loanout">Available</td>
+                <td  class="infoCell" id="item_location">57890</td>
             </tr>
 
         </table>
