--- a/donorProf.html
+++ b/donorProf.html
@@ -4,7 +4,6 @@
             <ion-grid>
                 <ion-row>
                     <ion-col>
-                        </div>
                         <ion-row>
                             <img id="menuLogo" src="./images/tent.png" alt="tent logo image">
                             <ion-title class="userName">Davier</ion-title>
@@ -12,7 +11,6 @@
                     </ion-col>
                 </ion-row>
             </ion-grid>
-
         </ion-toolbar>
     </ion-header>
     <ion-content>
@@ -40,7 +38,7 @@
             </ion-row>
             <ion-row>
                 <ion-col>
-                <br>
+                 <br>
                 </ion-col>
             </ion-row>
             <ion-row>
@@ -50,7 +48,7 @@
             </ion-row>
             <ion-row>
                 <ion-col>
-                <br>
+                 <br>
                 </ion-col>
             </ion-row>
             <ion-row>
@@ -60,7 +58,7 @@
             </ion-row>
             <ion-row>
                 <ion-col>
-                <br>
+                 <br>
                 </ion-col>
             </ion-row>
             <ion-row>
@@ -70,49 +68,39 @@
             </ion-row>
             <ion-row>
                 <ion-col>
-                <br>
+                 <br>
                 </ion-col>
             </ion-row>
             <ion-row>
                 <ion-col>
-                <br>
+                 <br>
                 </ion-col>
             </ion-row>
             <ion-row>
                 <ion-col>
-                <br>
+                 <br>
                 </ion-col>
             </ion-row>
             <ion-row>
                 <ion-col>
-                <br>
+                 <br>
                 </ion-col>
             </ion-row>
             <ion-row>
                 <ion-col>
-                <br>
+                 <br>
                 </ion-col>
             </ion-row>
             <ion-row>
                 <ion-col>
-                <br>
+                 <br>
                 </ion-col>
             </ion-row>
-            <ion-row>
-                <ion-col>
-                <br>
-                </ion-col>
-            </ion-row>
-            <ion-row>
-                <ion-col>
-                <br>
-                </ion-col>
-            </ion-row>
-            
             <ion-row>
                 <ion-col>
                     <ion-footer>
                         <ion-toolbar>
+                            <ion-icon name="log-out" slot="start"></ion-icon>
                             <ion-title class="logout-btn">Log Out</ion-title>
                         </ion-toolbar>
                     </ion-footer>
@@ -132,39 +120,9 @@
         </ion-toolbar>
     </ion-header>
 
-    <!--
-    <ion-item color="themewhite">
-        <ion-title size="small">Name:</ion-title>
-    </ion-item>
-    <ion-item color="themewhite">
-        <ion-title size="small">ID:</ion-title>
-    </ion-item>
-    <ion-item color="themewhite">
-        <ion-title size="small">Username:</ion-title>
-    </ion-item>
-    <ion-item color="themewhite">
-        <ion-title size="small">Address:</ion-title>
-    </ion-item>
-    <ion-item color="themewhite">
-        <ion-title size="small">Unit No:</ion-title>
-    </ion-item>
-    <ion-item color="themewhite">
-        <ion-title size="small">Tenant ID:</ion-title>
-    </ion-item>
-    <ion-item color="themewhite">
-        <ion-title size="small">Co-Tenant:</ion-title>
-    </ion-item>
-    <ion-item color="themewhite">
-        <ion-title size="small">Co-Tenant ID:</ion-title>
-    </ion-item>-->
-
     <ion-item color="themewhite">
         <ion-title size="small">Name:</ion-title><div id="donor_name">Jack Tyler</div>
     </ion-item>
-
-    <!--<ion-item color="themewhite">
-        <ion-title size="small">Address:</ion-title><div id="tenantAddress">address here</div>
-    </ion-item>-->
 
     <ion-item color="themewhite">
         <ion-title size="small">ID:</ion-title><div id="donor_id">123456</div>
