--- a/login.html
+++ b/login.html
@@ -44,6 +44,12 @@
     </div>
 
     <div class="acc-btn">
+      <ion-button id="dummy4-btn" expand="block" color="themetext">
+        <div class="whitetext">Log in as Admin</div>
+      </ion-button>
+    </div>
+
+    <div class="acc-btn">
       <ion-button id="dummy3-btn" expand="block" color="themetext">
         <div class="whitetext">See receipt</div>
       </ion-button>
