--- a/tenantFamily.html
+++ b/tenantFamily.html
@@ -18,6 +18,14 @@
             <ion-row>
                 <ion-col>
                     <ion-item>
+                        <ion-icon name="people-circle" slot="start"></ion-icon>
+                        <ion-title id="tenantFamily-btn">Family</ion-title>
+                    </ion-item>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                    <ion-item>
                         <ion-icon name="person-circle" slot="start"></ion-icon>
                         <ion-title id="tenantProf-btn">Profile</ion-title>
                     </ion-item>
@@ -57,42 +65,32 @@
             </ion-row>
             <ion-row>
                 <ion-col>
-                    <br>
+                <br>
                 </ion-col>
             </ion-row>
             <ion-row>
                 <ion-col>
-                    <br>
+                <br>
                 </ion-col>
             </ion-row>
             <ion-row>
                 <ion-col>
-                    <br>
+                 <br>
                 </ion-col>
             </ion-row>
             <ion-row>
                 <ion-col>
-                    <br>
+                <br>
                 </ion-col>
             </ion-row>
             <ion-row>
                 <ion-col>
-                    <br>
+                 <br>
                 </ion-col>
             </ion-row>
             <ion-row>
                 <ion-col>
-                    <br>
-                </ion-col>
-            </ion-row>
-            <ion-row>
-                <ion-col>
-                    <br>
-                </ion-col>
-            </ion-row>
-            <ion-row>
-                <ion-col>
-                    <br>
+                <br>
                 </ion-col>
             </ion-row>
             <ion-row>
