--- a/tenantUtility.html
+++ b/tenantUtility.html
@@ -18,6 +18,14 @@
             <ion-row>
                 <ion-col>
                     <ion-item>
+                        <ion-icon name="people-circle" slot="start"></ion-icon>
+                        <ion-title id="tenantFamily-btn">Family</ion-title>
+                    </ion-item>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                    <ion-item>
                         <ion-icon name="person-circle" slot="start"></ion-icon>
                         <ion-title id="tenantProf-btn">Profile</ion-title>
                     </ion-item>
@@ -57,11 +65,6 @@
             </ion-row>
             <ion-row>
                 <ion-col>
-                <br>
-                </ion-col>
-            </ion-row>
-            <ion-row>
-                <ion-col>
                  <br>
                 </ion-col>
             </ion-row>
@@ -88,11 +91,6 @@
             <ion-row>
                 <ion-col>
                 <br>
-                </ion-col>
-            </ion-row>
-            <ion-row>
-                <ion-col>
-                 <br>
                 </ion-col>
             </ion-row>
             <ion-row>
@@ -108,7 +106,6 @@
         </ion-grid>
     </ion-content>
 </ion-menu>
-
 <div class="ion-page" id="main-content">
     <ion-header>
         <ion-toolbar color="themetext">
