--- a/adminCons.html
+++ b/adminCons.html
@@ -18,16 +18,8 @@
             <ion-row>
                 <ion-col>
                     <ion-item>
-                        <ion-icon name="people-circle" slot="start"></ion-icon>
-                        <ion-title id="tenantFamily-btn">Family</ion-title>
-                    </ion-item>
-                </ion-col>
-            </ion-row>
-            <ion-row>
-                <ion-col>
-                    <ion-item>
                         <ion-icon name="person-circle" slot="start"></ion-icon>
-                        <ion-title id="tenantProf-btn">Profile</ion-title>
+                        <ion-title id="adminDonor-btn">Donor</ion-title>
                     </ion-item>
                 </ion-col>
             </ion-row>
@@ -35,7 +27,7 @@
                 <ion-col>
                     <ion-item>
                         <ion-icon name="folder" slot="start"></ion-icon>
-                        <ion-title id="tenantInv-btn">Inventory</ion-title>
+                        <ion-title id="adminInv-btn">Inventory</ion-title>
                     </ion-item>
                 </ion-col>
             </ion-row>
@@ -43,7 +35,7 @@
                 <ion-col>
                     <ion-item>
                         <ion-icon name="create" slot="start"></ion-icon>
-                        <ion-title id="tenantCons-btn">Consumables</ion-title>
+                        <ion-title id="adminCons-btn">Consumables</ion-title>
                     </ion-item>
                 </ion-col>
             </ion-row>
@@ -51,7 +43,7 @@
                 <ion-col>
                     <ion-item>
                         <ion-icon name="newspaper" slot="start"></ion-icon>
-                        <ion-title id="tenantUtility-btn">Utility Bills</ion-title>
+                        <ion-title id="adminUtility-btn">Utility Bills</ion-title>
                     </ion-item>
                 </ion-col>
             </ion-row>
@@ -59,18 +51,13 @@
                 <ion-col>
                     <ion-item>
                         <ion-icon name="card" slot="start"></ion-icon>
-                        <ion-title id="tenantPayment-btn">Payment</ion-title>
+                        <ion-title id="adminPayment-btn">Payment</ion-title>
                     </ion-item>
                 </ion-col>
             </ion-row>
             <ion-row>
                 <ion-col>
-                <br>
-                </ion-col>
-            </ion-row>
-            <ion-row>
-                <ion-col>
-                <br>
+                 <br>
                 </ion-col>
             </ion-row>
             <ion-row>
@@ -91,6 +78,16 @@
             <ion-row>
                 <ion-col>
                 <br>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                 <br>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                 <br>
                 </ion-col>
             </ion-row>
             <ion-row>
@@ -113,7 +110,7 @@
             <ion-buttons slot="start">
                 <ion-menu-button></ion-menu-button>
             </ion-buttons>
-            <ion-title class="pageTitle" slot="start">Inventory</ion-title>
+            <ion-title class="pageTitle" slot="start">Consumables</ion-title>
         </ion-toolbar>
     </ion-header>
 
@@ -127,10 +124,9 @@
     <ion-content class="ion-padding">
         <table class="infoTable">
             <tr>
-                <th class="infoCell">Serial</th>
-                <th class="infoCell">Donor</th>
-                <th class="infoCell">Item</th>
-                <th class="infoCell"></th>
+                <th class="infoCell">Tenant ID</th>
+                <th class="infoCell">Name</th>
+                <th class="infoCell">Label</th>
             </tr>
 
             <tr>
@@ -140,37 +136,95 @@
             </tr>
 
             <tr>
-
-                <td class="infoCell">0001</td>
-                <td class="infoCell">Jack</td>
-                <td class="infoCell">Spoon</td>
+                <td class="infoCell">9785</td>
+                <td class="infoCell">Evian</td>
+                <td class="infoCell">-</td>
                 <td class="infoButton">
-                    <ion-button class="tenantInvModal-btn" size="small" expand="block" color="themetext">More
+                    <ion-button class="consumeModal-btn" size="small" expand="block" color="themetext">More
                     </ion-button>
                 </td>
             </tr>
 
             <tr>
-
-                <td class="infoCell">0002</td>
-                <td class="infoCell">Ah Beng</td>
-                <td class="infoCell">Carpet</td>
+                <td class="infoCell">9785</td>
+                <td class="infoCell">Noodles</td>
+                <td class="infoCell">-</td>
                 <td class="infoButton">
-                    <ion-button class="tenantInvModal-btn" size="small" expand="block" color="themetext">More
+                    <ion-button class="consumeModal-btn" size="small" expand="block" color="themetext">More
                     </ion-button>
                 </td>
             </tr>
 
             <tr>
-
-                <td class="infoCell">0003</td>
-                <td class="infoCell">Ah Long</td>
-                <td class="infoCell">Curtain</td>
+                <td class="infoCell">9785</td>
+                <td class="infoCell">Grapes</td>
+                <td class="infoCell">-</td>
                 <td class="infoButton">
-                    <ion-button class="tenantInvModal-btn" size="small" expand="block" color="themetext">More
+                    <ion-button class="consumeModal-btn" size="small" expand="block" color="themetext">More
                     </ion-button>
                 </td>
             </tr>
+
+            <tr>
+                <td class="infoCell">9785</td>
+                <td class="infoCell">Fiji</td>
+                <td class="infoCell">Waiver</td>
+                <td class="infoButton">
+                    <ion-button class="consumeModal-btn" size="small" expand="block" color="themetext">More
+                    </ion-button>
+                </td>
+            </tr>
+
+            <tr>
+                <td class="infoCell">9785</td>
+                <td class="infoCell">Caramel</td>
+                <td class="infoCell">-</td>
+                <td class="infoButton">
+                    <ion-button class="consumeModal-btn" size="small" expand="block" color="themetext">More
+                    </ion-button>
+                </td>
+            </tr>
+
+            <tr>
+                <td class="infoCell">9785</td>
+                <td class="infoCell">Milk</td>
+                <td class="infoCell">Fee Imposed</td>
+                <td class="infoButton">
+                    <ion-button class="consumeModal-btn" size="small" expand="block" color="themetext">More
+                    </ion-button>
+                </td>
+            </tr>
+
+            <tr>
+                <td class="infoCell">9785</td>
+                <td class="infoCell">Kiwi</td>
+                <td class="infoCell">-</td>
+                <td class="infoButton">
+                    <ion-button class="consumeModal-btn" size="small" expand="block" color="themetext">More
+                    </ion-button>
+                </td>
+            </tr>
+
+            <tr>
+                <td class="infoCell">9785</td>
+                <td class="infoCell">Noodles</td>
+                <td class="infoCell">-</td>
+                <td class="infoButton">
+                    <ion-button class="consumeModal-btn" size="small" expand="block" color="themetext">More
+                    </ion-button>
+                </td>
+            </tr>
+
+            <tr>
+                <td class="infoCell">9785</td>
+                <td class="infoCell">Noodles</td>
+                <td class="infoCell">-</td>
+                <td class="infoButton">
+                    <ion-button class="consumeModal-btn" size="small" expand="block" color="themetext">More
+                    </ion-button>
+                </td>
+            </tr>
+
 
         </table>
     </ion-content>
