--- a/adminDonor.html
+++ b/adminDonor.html
@@ -18,16 +18,8 @@
             <ion-row>
                 <ion-col>
                     <ion-item>
-                        <ion-icon name="people-circle" slot="start"></ion-icon>
-                        <ion-title id="tenantFamily-btn">Family</ion-title>
-                    </ion-item>
-                </ion-col>
-            </ion-row>
-            <ion-row>
-                <ion-col>
-                    <ion-item>
                         <ion-icon name="person-circle" slot="start"></ion-icon>
-                        <ion-title id="tenantProf-btn">Profile</ion-title>
+                        <ion-title id="adminDonor-btn">Donor</ion-title>
                     </ion-item>
                 </ion-col>
             </ion-row>
@@ -35,7 +27,7 @@
                 <ion-col>
                     <ion-item>
                         <ion-icon name="folder" slot="start"></ion-icon>
-                        <ion-title id="tenantInv-btn">Inventory</ion-title>
+                        <ion-title id="adminInv-btn">Inventory</ion-title>
                     </ion-item>
                 </ion-col>
             </ion-row>
@@ -43,7 +35,7 @@
                 <ion-col>
                     <ion-item>
                         <ion-icon name="create" slot="start"></ion-icon>
-                        <ion-title id="tenantCons-btn">Consumables</ion-title>
+                        <ion-title id="adminCons-btn">Consumables</ion-title>
                     </ion-item>
                 </ion-col>
             </ion-row>
@@ -51,7 +43,7 @@
                 <ion-col>
                     <ion-item>
                         <ion-icon name="newspaper" slot="start"></ion-icon>
-                        <ion-title id="tenantUtility-btn">Utility Bills</ion-title>
+                        <ion-title id="adminUtility-btn">Utility Bills</ion-title>
                     </ion-item>
                 </ion-col>
             </ion-row>
@@ -59,18 +51,13 @@
                 <ion-col>
                     <ion-item>
                         <ion-icon name="card" slot="start"></ion-icon>
-                        <ion-title id="tenantPayment-btn">Payment</ion-title>
+                        <ion-title id="adminPayment-btn">Payment</ion-title>
                     </ion-item>
                 </ion-col>
             </ion-row>
             <ion-row>
                 <ion-col>
-                <br>
-                </ion-col>
-            </ion-row>
-            <ion-row>
-                <ion-col>
-                <br>
+                 <br>
                 </ion-col>
             </ion-row>
             <ion-row>
@@ -91,6 +78,16 @@
             <ion-row>
                 <ion-col>
                 <br>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                 <br>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                 <br>
                 </ion-col>
             </ion-row>
             <ion-row>
@@ -113,7 +110,7 @@
             <ion-buttons slot="start">
                 <ion-menu-button></ion-menu-button>
             </ion-buttons>
-            <ion-title class="pageTitle" slot="start">Inventory</ion-title>
+            <ion-title class="pageTitle" slot="start">Donor</ion-title>
         </ion-toolbar>
     </ion-header>
 
@@ -127,10 +124,10 @@
     <ion-content class="ion-padding">
         <table class="infoTable">
             <tr>
-                <th class="infoCell">Serial</th>
+                <th class="infoCell">ID</th>
                 <th class="infoCell">Donor</th>
-                <th class="infoCell">Item</th>
-                <th class="infoCell"></th>
+                <th class="infoCell">Item ID</th>
+                <th class="infoCell">Location</th>
             </tr>
 
             <tr>
@@ -141,35 +138,74 @@
 
             <tr>
 
-                <td class="infoCell">0001</td>
-                <td class="infoCell">Jack</td>
-                <td class="infoCell">Spoon</td>
-                <td class="infoButton">
-                    <ion-button class="tenantInvModal-btn" size="small" expand="block" color="themetext">More
-                    </ion-button>
-                </td>
+                <td class="infoCell">D9002</td>
+                <td class="infoCell">Tyler</td>
+                <td class="infoCell">2346</td>
+                <td class="infoCell">U10102</td>
             </tr>
 
             <tr>
 
-                <td class="infoCell">0002</td>
-                <td class="infoCell">Ah Beng</td>
-                <td class="infoCell">Carpet</td>
-                <td class="infoButton">
-                    <ion-button class="tenantInvModal-btn" size="small" expand="block" color="themetext">More
-                    </ion-button>
-                </td>
+                <td class="infoCell">D9003</td>
+                <td class="infoCell">Daniel</td>
+                <td class="infoCell">2347</td>
+                <td class="infoCell">U10103</td>
             </tr>
 
             <tr>
 
-                <td class="infoCell">0003</td>
-                <td class="infoCell">Ah Long</td>
-                <td class="infoCell">Curtain</td>
-                <td class="infoButton">
-                    <ion-button class="tenantInvModal-btn" size="small" expand="block" color="themetext">More
-                    </ion-button>
-                </td>
+                <td class="infoCell">D9004</td>
+                <td class="infoCell">Anson</td>
+                <td class="infoCell">2348</td>
+                <td class="infoCell">U10104</td>
+            </tr>
+
+            <tr>
+
+                <td class="infoCell">D9005</td>
+                <td class="infoCell">Breta</td>
+                <td class="infoCell">2349</td>
+                <td class="infoCell">U10105</td>
+            </tr>
+
+            <tr>
+
+                <td class="infoCell">D9006</td>
+                <td class="infoCell">Noel</td>
+                <td class="infoCell">2350</td>
+                <td class="infoCell">U10106</td>
+            </tr>
+
+            <tr>
+
+                <td class="infoCell">D9007</td>
+                <td class="infoCell">Matthew</td>
+                <td class="infoCell">2351</td>
+                <td class="infoCell">U10107</td>
+            </tr>
+
+            <tr>
+
+                <td class="infoCell">D9008</td>
+                <td class="infoCell">Phoebe</td>
+                <td class="infoCell">2352</td>
+                <td class="infoCell">U10108</td>
+            </tr>
+
+            <tr>
+
+                <td class="infoCell">D9009</td>
+                <td class="infoCell">Lorrie</td>
+                <td class="infoCell">2353</td>
+                <td class="infoCell">U10109</td>
+            </tr>
+
+            <tr>
+
+                <td class="infoCell">D9010</td>
+                <td class="infoCell">Daisy</td>
+                <td class="infoCell">2354</td>
+                <td class="infoCell">U10110</td>
             </tr>
 
         </table>
