--- a/adminPayment.html
+++ b/adminPayment.html
@@ -18,16 +18,8 @@
             <ion-row>
                 <ion-col>
                     <ion-item>
-                        <ion-icon name="people-circle" slot="start"></ion-icon>
-                        <ion-title id="tenantFamily-btn">Family</ion-title>
-                    </ion-item>
-                </ion-col>
-            </ion-row>
-            <ion-row>
-                <ion-col>
-                    <ion-item>
                         <ion-icon name="person-circle" slot="start"></ion-icon>
-                        <ion-title id="tenantProf-btn">Profile</ion-title>
+                        <ion-title id="adminDonor-btn">Donor</ion-title>
                     </ion-item>
                 </ion-col>
             </ion-row>
@@ -35,7 +27,7 @@
                 <ion-col>
                     <ion-item>
                         <ion-icon name="folder" slot="start"></ion-icon>
-                        <ion-title id="tenantInv-btn">Inventory</ion-title>
+                        <ion-title id="adminInv-btn">Inventory</ion-title>
                     </ion-item>
                 </ion-col>
             </ion-row>
@@ -43,7 +35,7 @@
                 <ion-col>
                     <ion-item>
                         <ion-icon name="create" slot="start"></ion-icon>
-                        <ion-title id="tenantCons-btn">Consumables</ion-title>
+                        <ion-title id="adminCons-btn">Consumables</ion-title>
                     </ion-item>
                 </ion-col>
             </ion-row>
@@ -51,7 +43,7 @@
                 <ion-col>
                     <ion-item>
                         <ion-icon name="newspaper" slot="start"></ion-icon>
-                        <ion-title id="tenantUtility-btn">Utility Bills</ion-title>
+                        <ion-title id="adminUtility-btn">Utility Bills</ion-title>
                     </ion-item>
                 </ion-col>
             </ion-row>
@@ -59,18 +51,13 @@
                 <ion-col>
                     <ion-item>
                         <ion-icon name="card" slot="start"></ion-icon>
-                        <ion-title id="tenantPayment-btn">Payment</ion-title>
+                        <ion-title id="adminPayment-btn">Payment</ion-title>
                     </ion-item>
                 </ion-col>
             </ion-row>
             <ion-row>
                 <ion-col>
-                <br>
-                </ion-col>
-            </ion-row>
-            <ion-row>
-                <ion-col>
-                <br>
+                 <br>
                 </ion-col>
             </ion-row>
             <ion-row>
@@ -91,6 +78,16 @@
             <ion-row>
                 <ion-col>
                 <br>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                 <br>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                 <br>
                 </ion-col>
             </ion-row>
             <ion-row>
@@ -152,9 +149,108 @@
 
             <tr>
 
-                <td class="infoCell">Item 1</td>
-                <td class="infoCell">Item 2</td>
-                <td class="infoCell">Item 3</td>
+                <td class="infoCell">9735</td>
+                <td class="infoCell">$15.00</td>
+                <td class="infoCell">-$5.00</td>
+                <td class="infoButton">
+                    <ion-button class="paymentCWModal-btn" size="small" expand="block" color="themetext">More
+                    </ion-button>
+                </td>
+            </tr>
+
+            <tr>
+
+                <td class="infoCell">9735</td>
+                <td class="infoCell">$10.00</td>
+                <td class="infoCell">-$5.00</td>
+                <td class="infoButton">
+                    <ion-button class="paymentCWModal-btn" size="small" expand="block" color="themetext">More
+                    </ion-button>
+                </td>
+            </tr>
+
+            <tr>
+
+                <td class="infoCell">9735</td>
+                <td class="infoCell">$20.00</td>
+                <td class="infoCell">-$5.00</td>
+                <td class="infoButton">
+                    <ion-button class="paymentCWModal-btn" size="small" expand="block" color="themetext">More
+                    </ion-button>
+                </td>
+            </tr>
+
+            <tr>
+
+                <td class="infoCell">9735</td>
+                <td class="infoCell">$15.00</td>
+                <td class="infoCell">-$5.00</td>
+                <td class="infoButton">
+                    <ion-button class="paymentCWModal-btn" size="small" expand="block" color="themetext">More
+                    </ion-button>
+                </td>
+            </tr>
+
+            <tr>
+
+                <td class="infoCell">9735</td>
+                <td class="infoCell">$10.00</td>
+                <td class="infoCell">-$5.00</td>
+                <td class="infoButton">
+                    <ion-button class="paymentCWModal-btn" size="small" expand="block" color="themetext">More
+                    </ion-button>
+                </td>
+            </tr>
+
+            <tr>
+
+                <td class="infoCell">9735</td>
+                <td class="infoCell">NIL</td>
+                <td class="infoCell">NIL</td>
+                <td class="infoButton">
+                    <ion-button class="paymentCWModal-btn" size="small" expand="block" color="themetext">More
+                    </ion-button>
+                </td>
+            </tr>
+
+            <tr>
+
+                <td class="infoCell">9735</td>
+                <td class="infoCell">$12.00</td>
+                <td class="infoCell">-$2.00</td>
+                <td class="infoButton">
+                    <ion-button class="paymentCWModal-btn" size="small" expand="block" color="themetext">More
+                    </ion-button>
+                </td>
+            </tr>
+
+            <tr>
+
+                <td class="infoCell">9735</td>
+                <td class="infoCell">$5.00</td>
+                <td class="infoCell">NIL</td>
+                <td class="infoButton">
+                    <ion-button class="paymentCWModal-btn" size="small" expand="block" color="themetext">More
+                    </ion-button>
+                </td>
+            </tr>
+
+            <tr>
+
+                <td class="infoCell">9735</td>
+                <td class="infoCell">$7.00</td>
+                <td class="infoCell">-$2.00</td>
+                <td class="infoButton">
+                    <ion-button class="paymentCWModal-btn" size="small" expand="block" color="themetext">More
+                    </ion-button>
+                </td>
+            </tr>
+
+            <tr>
+
+                <td class="infoCell">9735</td>
+                <td class="infoCell">NIL</td>
+                <td class="infoCell">NIL</td>
                 <td class="infoButton">
                     <ion-button class="paymentCWModal-btn" size="small" expand="block" color="themetext">More
                     </ion-button>
