--- a/tenantProf.html
+++ b/tenantProf.html
@@ -18,6 +18,14 @@
             <ion-row>
                 <ion-col>
                     <ion-item>
+                        <ion-icon name="people-circle" slot="start"></ion-icon>
+                        <ion-title id="tenantFamily-btn">Family</ion-title>
+                    </ion-item>
+                </ion-col>
+            </ion-row>
+            <ion-row>
+                <ion-col>
+                    <ion-item>
                         <ion-icon name="person-circle" slot="start"></ion-icon>
                         <ion-title id="tenantProf-btn">Profile</ion-title>
                     </ion-item>
@@ -53,16 +61,6 @@
                         <ion-icon name="card" slot="start"></ion-icon>
                         <ion-title id="tenantPayment-btn">Payment</ion-title>
                     </ion-item>
-                </ion-col>
-            </ion-row>
-            <ion-row>
-                <ion-col>
-                 <br>
-                </ion-col>
-            </ion-row>
-            <ion-row>
-                <ion-col>
-                <br>
                 </ion-col>
             </ion-row>
             <ion-row>
